[package]
name = 'array-append'
version = '0.1.0'
authors = ['LoganDark']
edition = '2021'
rust-version = '1.62'
description = 'a small family of functions for working with const-generic array types'
documentation = 'https://docs.rs/array-append'
readme = './README.md'
homepage = 'https://github.com/LoganDark/array-append'
repository = 'https://github.com/LoganDark/array-append'
license = 'MIT'
license-file = './LICENSE.md'
keywords = ['array', 'const-generics']
categories = ['no-std']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []
default = ['std']

[dependencies]
